nsg.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
    "contentVersion": "1.0.0.1",
    "parameters": {
      "virtualNetworkName": {
        "type": "string",
        "metadata": {
          "description": "The name of the existing VNet"
        },
        "defaultValue": "test-szkolachmury--vnet"
      },
      "subnetName": {
        "type": "string",
        "metadata": {
          "description": "The name of the existing subnet in vnet"
        },
        "defaultValue": "test-szkolachmury--subnet-1"
      },
      "subnetPrefixAddress": {
        "type": "string",
        "defaultValue": "10.0.0.0/24"
      },
      "nsg-name": {
        "type": "string",
        "defaultValue": "test-szkolachmury--nsg-1"
      }
    },
    "variables": {},
    "resources": [
      {
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "[parameters('nsg-name')]",
        "location": "[resourceGroup().location]",
        "apiVersion": "2018-03-01",
        "properties": {
          "securityRules": [
            {
              "name": "SSH",
              "properties": {
                "description": "Allows SSH traffic",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound"
              }
            },
            {
                "name": "HTTP",
                "properties": {
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "80",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "*",
                  "access": "Allow",
                  "priority": 101,
                  "direction": "Inbound"
                }
              },
              {
                  "name": "HTTPS",
                  "properties": {
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "443",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 102,
                    "direction": "Inbound"
                  }
                }
          ]
        }
      },
      {
        "apiVersion": "2018-03-01",
        "type": "Microsoft.Network/virtualNetworks/subnets",
        "name": "[concat(parameters('virtualNetworkName'), '/', parameters('subnetName'))]",
        "dependsOn": [
          "[parameters('nsg-name')]"
        ],
        "location": "[resourceGroup().location]",
        "properties": {
          "addressPrefix": "[parameters('subnetPrefixAddress')]",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsg-name'))]"
          }
        }
      }
    ],
    "outputs": {}
  }
